Se reemplazan emoticones en los archivos json,  y se regeneran md

--- a/docs/meetups/2025/202505-mayo.md
+++ b/docs/meetups/2025/202505-mayo.md
@@ -14,7 +14,7 @@ tags:
 
 ---
 
-# Meetup #PythonCDMX🐍 - 13 2025
+# Meetup #PythonCDMX <i class="fab fa-python"></i> - 13 2025
 
 <div class="event-highlight" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
     <h2 style="margin: 0 0 1rem 0; font-size: 2.5rem;">Publicando un paquete en PyPI</h2>
@@ -22,41 +22,41 @@ tags:
 </div>
 
 <div class="meetup-header" style="text-align: center; margin-bottom: 2rem;">
-    <img src="/images/meetup/202505-pythoncdmx.png" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
+    <img src="../../images/meetup/202505-pythoncdmx.png" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
 </div>
 
 ## Información del Evento
 
 <div class="event-details" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin: 2rem 0;">
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #28a745;">📅 Fecha</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-calendar"></i> Fecha</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Martes 13 de Mayo, 2025</p>
     </div>
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #007bff; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #007bff;">🕒 Hora</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: #007bff;"><i class="fas fa-clock"></i> Hora</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">18:30 - 21:00</p>
     </div>
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #dc3545; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #dc3545;">📍 Lugar</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: #dc3545;"><i class="fas fa-map-marker-alt"></i> Lugar</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Wizeline México, Torre Diana</p>
     </div>
     <div class="detail-card" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 4px 16px rgba(40, 167, 69, 0.3);">
-        <h3 style="margin: 0 0 0.5rem 0; color: white;">🎉 ¡GRATIS!</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: white;"><i class="fas fa-gift"></i> ¡GRATIS!</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Entrada completamente gratuita</p>
     </div>
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #ffc107; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #ffc107;">🎫 RSVP</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: #ffc107;"><i class="fas fa-ticket-alt"></i> RSVP</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;"><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
 ---
 
-## 🎤 Ponente
+## <i class="fas fa-microphone"></i> Ponente
 
 <div class="speaker-section" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; display: flex; align-items: center; gap: 2rem; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
     <div class="speaker-photo" style="flex-shrink: 0;">
-        <img src="/images/ponentes/202505-PythonCDMX-javier-novoa.png" alt="Javier Novoa" style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+        <img src="../../images/ponentes/202505-PythonCDMX-javier-novoa.png" alt="Javier Novoa" style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
     </div>
     <div class="speaker-info">
         <h2 style="margin: 0 0 0.5rem 0; font-size: 2rem;">Javier Novoa</h2>
@@ -75,22 +75,22 @@ tags:
 ## Descripción de la Charla
 
 <div class="talk-description" style="background: #f8f9fa; padding: 2rem; border-radius: 16px; margin: 2rem 0; border-left: 6px solid #28a745;">
-    <h3 style="margin: 0 0 1rem 0; color: #28a745;">🚀 Construyendo un paquete en Python y Publicándolo en PyPI</h3>
+    <h3 style="margin: 0 0 1rem 0; color: #28a745;"><i class="fas fa-rocket"></i> Construyendo un paquete en Python y Publicándolo en PyPI</h3>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">Tienes una gran idea, y estás listo para llevarla al público. ¿Cómo empezar? Eres un genio programando python. ¿Pero cómo haces para llevar tu código para que otros puedan usarlo? Algunos tips para: Configurar tu proyecto, Construir un paquete, Abrir una cuenta en PyPI, Publicar tu proyecto, Documentar tu proyecto, Consideraciones para compartir tu código.</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #FFD43B;">📦 PyPI</h4>
+            <h4 style="margin: 0 0 0.5rem 0; color: #FFD43B;"><i class="fas fa-box"></i> PyPI</h4>
             <p style="margin: 0; font-size: 0.9rem;">Python Package Index</p>
         </div>
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #3776AB;">🔧 setuptools</h4>
+            <h4 style="margin: 0 0 0.5rem 0; color: #3776AB;"><i class="fas fa-wrench"></i> setuptools</h4>
             <p style="margin: 0; font-size: 0.9rem;">Herramientas de empaquetado</p>
         </div>
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #28a745;">📤 twine</h4>
+            <h4 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-upload"></i> twine</h4>
             <p style="margin: 0; font-size: 0.9rem;">Subida de paquetes</p>
         </div>
         
@@ -104,7 +104,7 @@ tags:
 ## Video del Meetup
 <div class="video-section" style="text-align: center; margin: 2rem 0;">
     <div style="background: #f8f9fa; padding: 2rem; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 1rem 0; color: #dc3545;">📺 ¡Mira la charla completa!</h3>
+        <h3 style="margin: 0 0 1rem 0; color: #dc3545;"><i class="fas fa-tv"></i> ¡Mira la charla completa!</h3>
         <div style="position: relative; padding-bottom: 56.25%; height: 0; margin-bottom: 1rem;">
             <iframe
                 src="https://www.youtube.com/embed/1nHTVEOSRlg"
@@ -115,7 +115,7 @@ tags:
                 allowfullscreen>
             </iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=1nHTVEOSRlg" style="background: #dc3545; color: white; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;">🎬 Ver en YouTube</a>
+        <a href="https://www.youtube.com/watch?v=1nHTVEOSRlg" style="background: #dc3545; color: white; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;"><i class="fab fa-youtube"></i> Ver en YouTube</a>
     </div>
 </div>
 ---
@@ -125,15 +125,15 @@ tags:
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
         
-        <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">🐍 Python</a>
+        <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
         
-        <a href="/tags/pypi/" style="background: #FFD43B; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">📦 PyPI</a>
+        <a href="/tags/pypi/" style="background: #FFD43B; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-box"></i> PyPI</a>
         
-        <a href="/tags/packaging/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">📦 Packaging</a>
+        <a href="/tags/packaging/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-box"></i> Packaging</a>
         
-        <a href="/tags/open-source/" style="background: #fd7e14; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">🔓 Open Source</a>
+        <a href="/tags/open-source/" style="background: #fd7e14; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-unlock"></i> Open Source</a>
         
-        <a href="/tags/devops/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">⚙️ DevOps</a>
+        <a href="/tags/devops/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-cog"></i> DevOps</a>
         
     </div>
 </div>
@@ -142,7 +142,7 @@ tags:
 
 ## Networking
 <div class="networking-section" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(40, 167, 69, 0.3);">
-    <h3 style="margin: 0 0 1rem 0; font-size: 1.5rem;">💬 ¡Conecta con la comunidad!</h3>
+    <h3 style="margin: 0 0 1rem 0; font-size: 1.5rem;"><i class="fas fa-comments"></i> ¡Conecta con la comunidad!</h3>
     <p style="margin: 0; font-size: 1.1rem; line-height: 1.6;">
         Después de la charla habrá un tiempo de networking donde podrás platicar con programadores de diferentes niveles e intereses.
         ¡Es la oportunidad perfecta para hacer conexiones profesionales y aprender de otros desarrolladores!
@@ -154,16 +154,16 @@ tags:
 ## Enlaces de la Comunidad
 <div class="community-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 2rem 0;">
     <a href="https://t.me/PythonCDMX" style="background: #0088cc; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        📱 Telegram
+        <i class="fab fa-telegram"></i> Telegram
     </a>
     <a href="https://www.meetup.com/python-mexico" style="background: #e51937; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        📅 Meetup
+        <i class="fab fa-meetup"></i> Meetup
     </a>
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        🎥 YouTube
+        <i class="fab fa-youtube"></i> YouTube
     </a>
     <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        💻 GitHub
+        <i class="fab fa-github"></i> GitHub
     </a>
 </div>
 
