--- a/docs/meetups/2025/202506-junio.md
+++ b/docs/meetups/2025/202506-junio.md
@@ -18,7 +18,7 @@ tags:
 
 ---
 
-# Meetup #PythonCDMX🐍 - 10 2025
+# Meetup #PythonCDMX <i class="fab fa-python"></i> - 10 2025
 
 <div class="event-highlight" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
     <h2 style="margin: 0 0 1rem 0; font-size: 2.5rem;">Usando Python y software libre</h2>
@@ -26,48 +26,48 @@ tags:
 </div>
 
 <div class="meetup-header" style="text-align: center; margin-bottom: 2rem;">
-    <img src="/images/meetup/202506-pythoncdmx.png" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
+    <img src="../../images/meetup/202506-pythoncdmx.png" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
 </div>
 
 ## Información del Evento
 
 <div class="event-details" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1.5rem; margin: 2rem 0;">
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #28a745;">📅 Fecha</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-calendar"></i> Fecha</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Martes 10 de Junio, 2025</p>
     </div>
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #007bff; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #007bff;">🕒 Hora</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: #007bff;"><i class="fas fa-clock"></i> Hora</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">18:30 - 21:00</p>
     </div>
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #dc3545; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #dc3545;">📍 Lugar</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: #dc3545;"><i class="fas fa-map-marker-alt"></i> Lugar</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Wizeline México, Torre Diana</p>
     </div>
     <div class="detail-card" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 4px 16px rgba(40, 167, 69, 0.3);">
-        <h3 style="margin: 0 0 0.5rem 0; color: white;">🎉 ¡GRATIS!</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: white;"><i class="fas fa-gift"></i> ¡GRATIS!</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Entrada completamente gratuita</p>
     </div>
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #ffc107; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 0.5rem 0; color: #ffc107;">🎫 RSVP</h3>
+        <h3 style="margin: 0 0 0.5rem 0; color: #ffc107;"><i class="fas fa-ticket-alt"></i> RSVP</h3>
         <p style="margin: 0; font-size: 1.1rem; font-weight: 600;"><a href="https://www.meetup.com/python-mexico/" style="color: #ffc107; text-decoration: none;">¡Regístrate aquí!</a></p>
     </div>
 </div>
 
 ---
 
-## 🎤 Ponente
+## <i class="fas fa-microphone"></i> Ponente
 
 <div class="speaker-section" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; display: flex; align-items: center; gap: 2rem; box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);">
     <div class="speaker-photo" style="flex-shrink: 0;">
-        <img src="/images/ponentes/202506-PythonCDMX-carlos-caballero.jpg" alt="Carlos Cesar Caballero" style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+        <img src="../../images/ponentes/202506-PythonCDMX-carlos-caballero.jpg" alt="Carlos Cesar Caballero" style="width: 150px; height: 150px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
     </div>
     <div class="speaker-info">
         <h2 style="margin: 0 0 0.5rem 0; font-size: 2rem;">Carlos Cesar Caballero</h2>
         <p style="margin: 0 0 1rem 0; font-size: 1.1rem; opacity: 0.9;">Ingeniero en Ciencias Informáticas</p>
         <p style="margin: 0 0 1rem 0; line-height: 1.6;">Ingeniero de Software en Aurora Solar. Entusiasta del desarrollo de tecnología, con particular interés en la Inteligencia Artificial y las tecnologías de código abierto. Disfruta de la exploración de temas técnicos y la participación activa en comunidades.</p>
         <div class="speaker-links">
-            <a href="https://www.linkedin.com/in/cccaballero/" style="background: white; color: #667eea; padding: 0.5rem 1rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; margin-right: 1rem; transition: all 0.3s ease;">🔗 LinkedIn</a>
+            <a href="https://www.linkedin.com/in/cccaballero/" style="background: white; color: #667eea; padding: 0.5rem 1rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; margin-right: 1rem; transition: all 0.3s ease;"><i class="fab fa-linkedin"></i> LinkedIn</a>
             
             
         </div>
@@ -79,22 +79,22 @@ tags:
 ## Descripción de la Charla
 
 <div class="talk-description" style="background: #f8f9fa; padding: 2rem; border-radius: 16px; margin: 2rem 0; border-left: 6px solid #28a745;">
-    <h3 style="margin: 0 0 1rem 0; color: #28a745;">🚀 Usando Python y software libre para crear nuevas herramientas: Traductor de voz español-inglés</h3>
+    <h3 style="margin: 0 0 1rem 0; color: #28a745;"><i class="fas fa-rocket"></i> Usando Python y software libre para crear nuevas herramientas: Traductor de voz español-inglés</h3>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">Esta presentación muestra cómo combinar herramientas de software libre utilizando Python como lenguaje integrador para desarrollar soluciones funcionales y accesibles. A través del caso práctico de un traductor de voz español-inglés que opera completamente sin conexión, se exploran tecnologías abiertas como Vosk, Argos Translate y Coqui TTS.</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #007bff;">🎤 Vosk</h4>
+            <h4 style="margin: 0 0 0.5rem 0; color: #007bff;"><i class="fas fa-microphone"></i> Vosk</h4>
             <p style="margin: 0; font-size: 0.9rem;">Reconocimiento de voz offline</p>
         </div>
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #28a745;">🌐 Argos Translate</h4>
+            <h4 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-globe"></i> Argos Translate</h4>
             <p style="margin: 0; font-size: 0.9rem;">Traducción neural offline</p>
         </div>
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: #dc3545;">🔊 Coqui TTS</h4>
+            <h4 style="margin: 0 0 0.5rem 0; color: #dc3545;"><i class="fas fa-volume-up"></i> Coqui TTS</h4>
             <p style="margin: 0; font-size: 0.9rem;">Síntesis de voz neural</p>
         </div>
         
@@ -108,7 +108,7 @@ tags:
 ## Video del Meetup
 <div class="video-section" style="text-align: center; margin: 2rem 0;">
     <div style="background: #f8f9fa; padding: 2rem; border-radius: 16px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
-        <h3 style="margin: 0 0 1rem 0; color: #dc3545;">📺 ¡Mira la charla completa!</h3>
+        <h3 style="margin: 0 0 1rem 0; color: #dc3545;"><i class="fas fa-tv"></i> ¡Mira la charla completa!</h3>
         <div style="position: relative; padding-bottom: 56.25%; height: 0; margin-bottom: 1rem;">
             <iframe
                 src="https://www.youtube.com/embed/hSaZXuY30zI"
@@ -119,7 +119,7 @@ tags:
                 allowfullscreen>
             </iframe>
         </div>
-        <a href="https://www.youtube.com/watch?v=hSaZXuY30zI" style="background: #dc3545; color: white; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;">🎬 Ver en YouTube</a>
+        <a href="https://www.youtube.com/watch?v=hSaZXuY30zI" style="background: #dc3545; color: white; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; transition: all 0.3s ease;"><i class="fab fa-youtube"></i> Ver en YouTube</a>
     </div>
 </div>
 ---
@@ -129,19 +129,19 @@ tags:
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
         
-        <a href="/tags/python/" style="background: #007bff; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">🐍 Python</a>
+        <a href="/tags/python/" style="background: #007bff; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
         
-        <a href="/tags/software-libre/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">🔓 Software Libre</a>
+        <a href="/tags/software-libre/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-unlock"></i> Software Libre</a>
         
-        <a href="/tags/traducción/" style="background: #ffc107; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">🌐 Traducción</a>
+        <a href="/tags/traducción/" style="background: #ffc107; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-globe"></i> Traducción</a>
         
-        <a href="/tags/vosk/" style="background: #17a2b8; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">🎤 Vosk</a>
+        <a href="/tags/vosk/" style="background: #17a2b8; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-microphone"></i> Vosk</a>
         
-        <a href="/tags/argos-translate/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">🔤 Argos Translate</a>
+        <a href="/tags/argos-translate/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-language"></i> Argos Translate</a>
         
-        <a href="/tags/coqui-tts/" style="background: #e83e8c; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">🔊 Coqui TTS</a>
+        <a href="/tags/coqui-tts/" style="background: #e83e8c; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-volume-up"></i> Coqui TTS</a>
         
-        <a href="/tags/open-source/" style="background: #fd7e14; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;">📦 Open Source</a>
+        <a href="/tags/open-source/" style="background: #fd7e14; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-box"></i> Open Source</a>
         
     </div>
 </div>
@@ -150,7 +150,7 @@ tags:
 
 ## Networking
 <div class="networking-section" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 2rem; border-radius: 16px; margin: 2rem 0; text-align: center; box-shadow: 0 8px 32px rgba(40, 167, 69, 0.3);">
-    <h3 style="margin: 0 0 1rem 0; font-size: 1.5rem;">💬 ¡Conecta con la comunidad!</h3>
+    <h3 style="margin: 0 0 1rem 0; font-size: 1.5rem;"><i class="fas fa-comments"></i> ¡Conecta con la comunidad!</h3>
     <p style="margin: 0; font-size: 1.1rem; line-height: 1.6;">
         Después de la charla habrá un tiempo de networking donde podrás platicar con programadores de diferentes niveles e intereses.
         ¡Es la oportunidad perfecta para hacer conexiones profesionales y aprender de otros desarrolladores!
@@ -162,16 +162,16 @@ tags:
 ## Enlaces de la Comunidad
 <div class="community-links" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 2rem 0;">
     <a href="https://t.me/PythonCDMX" style="background: #0088cc; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        📱 Telegram
+        <i class="fab fa-telegram"></i> Telegram
     </a>
     <a href="https://www.meetup.com/python-mexico" style="background: #e51937; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        📅 Meetup
+        <i class="fab fa-meetup"></i> Meetup
     </a>
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        🎥 YouTube
+        <i class="fab fa-youtube"></i> YouTube
     </a>
     <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
-        💻 GitHub
+        <i class="fab fa-github"></i> GitHub
     </a>
 </div>
 
