--- a/docs/meetups/2025/202501-enero.md
+++ b/docs/meetups/2025/202501-enero.md
@@ -24,8 +24,8 @@ tags:
 </div>
 
 <div class="meetup-header" style="text-align: center; margin-bottom: 2rem;">
-    <img src="../../images/meetup/202501-pythoncdmx.png" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
-</div>
+    <img src="/../../images/meetup/202501-pythoncdmx.png" alt="Banner del evento" style="max-width: 100%; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.1);">
+    </div>
 
 
 
@@ -42,7 +42,7 @@ tags:
     </div>
     <div class="detail-card" style="background: #f8f9fa; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #dc3545; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
         <h3 style="margin: 0 0 0.5rem 0; color: #dc3545;"><i class="fas fa-map-marker-alt"></i> Lugar</h3>
-        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Wizeline México, Torre Diana</p>
+        <p style="margin: 0; font-size: 1.1rem; font-weight: 600;">Wizeline México</p>
     </div>
     <div class="detail-card" style="background: linear-gradient(135deg, #28a745 0%, #20c997 100%); color: white; padding: 1.5rem; border-radius: 12px; border-left: 4px solid #28a745; box-shadow: 0 4px 16px rgba(40, 167, 69, 0.3);">
         <h3 style="margin: 0 0 0.5rem 0; color: white;"><i class="fas fa-gift"></i> ¡GRATIS!</h3>
@@ -67,7 +67,7 @@ tags:
 
     <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
         <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="../../images/ponentes/ponentePythonCDMX.jpg" alt="elMau (Mauricio B.)" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="elMau (Mauricio B.)" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
         </div>
         <div class="speaker-info">
             <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">elMau (Mauricio B.)</h4>
@@ -117,7 +117,7 @@ tags:
 
     <div class="speaker-section" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; display: flex; align-items: center; gap: 2rem;">
         <div class="speaker-photo" style="flex-shrink: 0;">
-            <img src="../../images/ponentes/ponentePythonCDMX.jpg" alt="Mauro Parra" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
+            <img src="/../../images/ponentes/ponentePythonCDMX.jpg" alt="Mauro Parra" style="width: 120px; height: 120px; border-radius: 50%; border: 4px solid white; box-shadow: 0 4px 16px rgba(0,0,0,0.2); object-fit: cover;">
         </div>
         <div class="speaker-info">
             <h4 style="margin: 0 0 0.5rem 0; font-size: 1.5rem; color: #333;">Mauro Parra</h4>
