--- a/docs/meetups/2025/202507-julio.md
+++ b/docs/meetups/2025/202507-julio.md
@@ -92,23 +92,23 @@ Ven a platicar de estas y otras mejores prácticas con nosotros.</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: ;"> </h4>
-            <p style="margin: 0; font-size: 0.9rem;"></p>
+            <h4 style="margin: 0 0 0.5rem 0; color: #3776AB;"><i class="fab fa-python"></i> Python</h4>
+            <p style="margin: 0; font-size: 0.9rem;">Lenguaje de programación</p>
         </div>
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: ;"> </h4>
-            <p style="margin: 0; font-size: 0.9rem;"></p>
+            <h4 style="margin: 0 0 0.5rem 0; color: #FF6B35;"><i class="fas fa-bolt"></i> UV</h4>
+            <p style="margin: 0; font-size: 0.9rem;">Gestor de paquetes y entornos virtuales</p>
         </div>
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: ;"> </h4>
-            <p style="margin: 0; font-size: 0.9rem;"></p>
+            <h4 style="margin: 0 0 0.5rem 0; color: #FFD43B;"><i class="fas fa-download"></i> pip</h4>
+            <p style="margin: 0; font-size: 0.9rem;">Gestor de paquetes de Python</p>
         </div>
         
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-            <h4 style="margin: 0 0 0.5rem 0; color: ;"> </h4>
-            <p style="margin: 0; font-size: 0.9rem;"></p>
+            <h4 style="margin: 0 0 0.5rem 0; color: #28A745;"><i class="fas fa-layer-group"></i> venv</h4>
+            <p style="margin: 0; font-size: 0.9rem;">Entornos virtuales de Python</p>
         </div>
         
     </div>
